SC-11 Added show more button for order comment and hid the text area by default

--- a/view/frontend/templates/checkout/comment.phtml
+++ b/view/frontend/templates/checkout/comment.phtml
@@ -6,6 +6,7 @@
     <form method="post" action="<?php echo $block->getCommentSubmitUrl(); ?>" id="svea-checkout-comment">
         <div class="svea-comment-title">
             <h4><?= __('Order Comment (Optionally)')?></h4>
+            <input type="button" class="svea-btn show-more" value="<?= __('Show More')?>"/>
         </div>
         <div class="fieldset comment">
             <div class="input-box field">
