--- a/view/frontend/web/css/source/module/_checkout.less
+++ b/view/frontend/web/css/source/module/_checkout.less
@@ -955,17 +955,32 @@ button:not(.primary).svea-primary {
       }
     }
 
+    #svea-checkout_cart {
+      border-top: none;
+    }
+
+    .svea-checkout-section-content {
+      .table-wrapper.order-items {
+        max-width: 660px;
+        margin: 0 auto;
+      }
+    }
+
     table.svea-checkout-review {
       tbody {
+        border-bottom: @svea-border;
         tr {
-          border-bottom: @svea-border;
           padding-bottom: 20px;
-          display: inline-block;
+          display: table;
+          content: "";
+          clear: both;
+          margin: 0 auto;
         }
       }
 
       th {
         padding: 10px 0;
+        border-top: @svea-border;
         border-bottom: @svea-border;
 
         &.qty,
@@ -1010,6 +1025,10 @@ button:not(.primary).svea-primary {
           }
         }
 
+        .remove-product {
+            top: 0;
+        }
+
         &.item-desc {
           .product-item-details {
             .product-item-info {
@@ -1029,6 +1048,7 @@ button:not(.primary).svea-primary {
 
   #svea_cart_extra {
     order: 3;
+    width: 100%;
   }
 
   #svea-checkout_cart_totals {
