--- a/view/frontend/web/template/payment/checkout.html
+++ b/view/frontend/web/template/payment/checkout.html
@@ -16,7 +16,7 @@
                 <button class="action primary checkout"
                         type="submit"
                         data-bind="
-                        click: continueTosvea-checkout,
+                        click: continueToSvea,
                         attr: {title: $t('Place Order')},
                         enable: (getCode() == isChecked()),
                         css: {disabled: !isPlaceOrderActionAllowed()}
