--- a/view/frontend/web/css/source/module/_checkout.less
+++ b/view/frontend/web/css/source/module/_checkout.less
@@ -182,6 +182,7 @@
         content: url("../images/check.svg");
         padding-top: 1px;
         left: 0;
+        top: 50%;
       }
 
       &:checked + label:before {
