--- a/view/frontend/layout/svea_checkout_index_index.xml
+++ b/view/frontend/layout/svea_checkout_index_index.xml
@@ -99,6 +99,20 @@
                                                template="Magento_Checkout::cart/item/renderer/actions/remove.phtml"/>
                                     </block>
                                 </block>
+
+                                <block class="Magento\Checkout\Block\Cart\Item\Renderer" as="virtual"
+                                       template="Svea_Checkout::checkout/cart/item/item.phtml">
+                                    <block class="Magento\Checkout\Block\Cart\Item\Renderer\Actions"
+                                           name="checkout.cart.item.renderers.virtual.actions" as="actions">
+                                        <block class="Magento\Checkout\Block\Cart\Item\Renderer\Actions\Edit"
+                                               name="checkout.cart.item.renderers.virtual.actions.edit"
+                                               template="Magento_Checkout::cart/item/renderer/actions/edit.phtml"/>
+                                        <block class="Magento\Checkout\Block\Cart\Item\Renderer\Actions\Remove"
+                                               name="checkout.cart.item.renderers.virtual.actions.remove"
+                                               template="Magento_Checkout::cart/item/renderer/actions/remove.phtml"/>
+                                    </block>
+                                </block>
+
                                 <block class="Magento\Bundle\Block\Checkout\Cart\Item\Renderer" as="grouped"
                                        template="Svea_Checkout::checkout/cart/item/item.phtml"/>
                             </block>
