Mminor css fix for IE compatible

--- a/view/frontend/web/css/source/module/_checkout.less
+++ b/view/frontend/web/css/source/module/_checkout.less
@@ -756,9 +756,9 @@ button:not(.primary).svea-primary {
   .order_inside {
     padding: 10px 40px;
   }
-  #svea_cart_extra {
+  /*#svea_cart_extra {
     flex: 1.5;
-  }
+  }*/
 
   #discount-coupon-form {
     .fieldset {
@@ -851,7 +851,7 @@ button:not(.primary).svea-primary {
     table {
       tfoot {
         th {
-          text-align: left;
+          text-align: right;
         }
 
         tr:last-of-type {
