SC-21 Add checkmark to order comment that shows that the comment has been saved.

--- a/view/frontend/web/css/source/module/_checkout.less
+++ b/view/frontend/web/css/source/module/_checkout.less
@@ -564,6 +564,7 @@ table {
       height: 50px;
       font-size: 18px;
     }
+
   }
 }
 
@@ -769,6 +770,10 @@ button:not(.primary).svea-primary {
 
   #svea_comment #svea-checkout-comment {
     margin: 0 30px;
+  }
+
+  .success-save{
+    content: '\2713';
   }
 
   .table-wrapper,
@@ -1305,5 +1310,9 @@ button:not(.primary).svea-primary {
     height: 50px;
     font-size: 18px;
     padding: 10px 50px;
+  }
+
+  .success-save{
+    display: none;
   }
 }
