SC-21 Made some changes with checkmark and moved to right.

--- a/view/frontend/web/css/source/module/_checkout.less
+++ b/view/frontend/web/css/source/module/_checkout.less
@@ -772,8 +772,9 @@ button:not(.primary).svea-primary {
     margin: 0 30px;
   }
 
-  .success-save{
+  .success-save:after{
     content: '\2713';
+    float: right;
   }
 
   .table-wrapper,
@@ -1312,7 +1313,4 @@ button:not(.primary).svea-primary {
     padding: 10px 50px;
   }
 
-  .success-save{
-    display: none;
-  }
 }
