SC-30 Firefox issue with responsiveness

--- a/view/frontend/web/css/source/module/_checkout.less
+++ b/view/frontend/web/css/source/module/_checkout.less
@@ -947,6 +947,11 @@ button:not(.primary).svea-primary {
 //  _____________________________________________
 
 @media only screen and (max-width: @screen__m) {
+  
+  .columns {
+    display: block;
+  }
+  
   #svea_checkoutSidebar {
     padding: 20px 0;
 
