SC-29 Shipping radio buttons not aligned

--- a/view/frontend/web/css/source/module/_checkout.less
+++ b/view/frontend/web/css/source/module/_checkout.less
@@ -621,6 +621,7 @@ table {
 
       span {
         position: relative;
+        vertical-align: -moz-middle-with-baseline;
       }
 
       label {
@@ -951,7 +952,7 @@ button:not(.primary).svea-primary {
   .columns {
     display: block;
   }
-  
+
   #svea_checkoutSidebar {
     padding: 20px 0;
 
