fix slide up, add extra button

--- a/view/frontend/web/css/source/module/_checkout.less
+++ b/view/frontend/web/css/source/module/_checkout.less
@@ -303,8 +303,12 @@ label[for="coupon-toggle"] {
     font-size: 18px;
   }
 
-  .svea-btn.show-more {
+  .svea-btn.show-more, .show-btn.show-less{
     height: 30px !important;
+  }
+
+  .svea-btn.show-less {
+    display: none;
   }
 }
 
