--- a/view/frontend/templates/checkout/comment.phtml
+++ b/view/frontend/templates/checkout/comment.phtml
@@ -7,6 +7,7 @@
         <div class="svea-comment-title">
             <h4><?= __('Order Comment (Optionally)')?></h4>
             <input type="button" class="svea-btn show-more" value="<?= __('Show More')?>"/>
+            <input type="button" class="svea-btn show-less" value="<?= __('Show Less')?>"/>
         </div>
         <div class="fieldset comment">
             <div class="input-box field">
