add partner key, checkout amount diff config, docs images

--- a/view/frontend/templates/checkout/shipping.phtml
+++ b/view/frontend/templates/checkout/shipping.phtml
@@ -21,3 +21,10 @@
     </div>
 </div>
 <?php endif; ?>
+<script type="text/x-magento-init">
+        {
+            "#shipping-method-form": {
+                "sveaShippingMethod": {}
+            }
+        }
+</script>
