--- a/view/frontend/templates/sidebar.phtml
+++ b/view/frontend/templates/sidebar.phtml
@@ -4,8 +4,14 @@
 
 /** @var $block Svea\Checkout\Block\Checkout */
 ?>
+<script>
+    window.checkoutConfig = <?= json_encode($block->getCheckoutConfig()); ?>
+</script>
+
 <div class="svea-checkout-review" id="svea-checkout-review">
     <div class="svea-checkout-cart svea-checkout-section" id="svea-checkout-cart">
+
+        <?php echo $block->getChildHtml('reward.tooltip.checkout.salesrule'); ?>
         <div class="svea-checkout-section-content" data-role="content"
              aria-labelledby="svea-checkout-cart-heading">
             <?php echo $block->getChildHtml('cart'); ?>
@@ -26,19 +32,29 @@
 </span>
 <script type="text/x-magento-init">
     {
-        "*": {
+        "*":
+        {
             "Magento_Ui/js/core/app": {
                 "components": {
-                    "sveaCheckout": {
+                    "sveaCheckout" : {
                         "component": "sveaCheckout",
                         "config": {
                             "ctrlkey": "<?php echo $block->generateHashSignatureByQuote(); ?>",
                             "ctrlcookie": "<?php echo $block->getCartCtrlKeyCookieName(); ?>",
                             "sveaShippingAddressChange": "<?php echo $block->getShippingAddressSubmitUrl(); ?>"
                         }
+                    },
+                    "reward": {
+                        "component": "Magento_Reward/js/view/payment/reward",
+                        "displayArea": "reward"
+                    },
+                    "reward-tooltip": {
+                        "component": "Magento_Reward/js/view/authentication/tooltip",
+                        "displayArea": "authenticationPopup"
                     }
                 }
             }
         }
+
     }
 </script>
