--- a/view/frontend/templates/checkout/cart.phtml
+++ b/view/frontend/templates/checkout/cart.phtml
@@ -7,7 +7,7 @@
 // @codingStandardsIgnoreFile
 /**
  * @see \Magento\Paypal\Block\Express\Review\Details
- * @var \Magento\Paypal\Block\Express\Review\Details $block
+ * @var \Svea\Checkout\Block\Checkout\Cart $block
  */
 // svea-checkout_cart id is mandatory (it's used into ajax update blocks part)
 
