--- a/view/frontend/layout/svea_checkout_index_index.xml
+++ b/view/frontend/layout/svea_checkout_index_index.xml
@@ -108,6 +108,18 @@
                                                template="Magento_Checkout::cart/item/renderer/actions/remove.phtml"/>
                                     </block>
                                 </block>
+                                <block class="Magento\Downloadable\Block\Checkout\Cart\Item\Renderer" name="checkout.cart.item.renderers.downloadable" as="downloadable"
+                                    template="Svea_Checkout::checkout/cart/item/item.phtml">
+                                    <block class="Magento\Checkout\Block\Cart\Item\Renderer\Actions"
+                                        name="checkout.cart.item.renderers.downloadable.actions" as="actions">
+                                        <block class="Magento\Checkout\Block\Cart\Item\Renderer\Actions\Edit"
+                                            name="checkout.cart.item.renderers.downloadable.actions.edit"
+                                            template="Magento_Checkout::cart/item/renderer/actions/edit.phtml"/>
+                                        <block class="Magento\Checkout\Block\Cart\Item\Renderer\Actions\Remove"
+                                            name="checkout.cart.item.renderers.downloadable.actions.remove"
+                                            template="Magento_Checkout::cart/item/renderer/actions/remove.phtml"/>
+                                    </block>
+                                </block>
 
                                 <block class="Magento\Bundle\Block\Checkout\Cart\Item\Renderer" as="grouped"
                                        template="Svea_Checkout::checkout/cart/item/item.phtml"/>
