[SC-182] Order View in Admin now displays Billing References for Company orders paid with Invoice

--- a/view/adminhtml/templates/payment/checkout/info.phtml
+++ b/view/adminhtml/templates/payment/checkout/info.phtml
@@ -24,4 +24,12 @@ use Magento\Framework\Escaper;
             <td><?= $escaper->escapeHtml($block->getSveaCustomerReference()) ?>
         </tr>
     <?php endif ?>
+    <?php foreach ($block->getSveaBillingReferences() as $billingReference): ?>
+        <tr>
+            <th><?= $escaper->escapeHtml($billingReference->getType()) ?>:</th>
+            <td>
+                <?= $escaper->escapeHtml($billingReference->getValue()) ?>
+            </td>
+        </tr>
+    <?php endforeach ?>
 </table>
