[SC-189] Adds ability to display shipping address together with the shipping method info in Order Admin when Svea Shipping is used. It will show either the Customer's Shipping Address or the Shipping Location's address depending on the type of chosen shipping service. Also moved Svea Shipping settings to its own sub-section in the Svea Checkout settings.

--- a/view/adminhtml/layout/sales_order_view.xml
+++ b/view/adminhtml/layout/sales_order_view.xml
@@ -9,6 +9,17 @@
                 <arguments>
                     <argument name="view_model" xsi:type="object">Svea\Checkout\ViewModel\Adminhtml\Order\View\Shipping</argument>
                 </arguments>
+                <block
+                    class="Magento\Sales\Block\Adminhtml\Order\AbstractOrder"
+                    name="order_shipping_view_address"
+                    as="address"
+                    template="Svea_Checkout::order/view/shipping/info/address.phtml"
+                    ifconfig="svea_checkout/settings/svea_shipping_settings/admin_show_shipping_address_with_shipping_info"
+                >
+                    <arguments>
+                        <argument name="view_model" xsi:type="object">Svea\Checkout\ViewModel\Adminhtml\Order\View\Shipping</argument>
+                    </arguments>
+                </block>
             </block>
         </referenceBlock>
     </body>
