[SC-189] Corrected email template variable description

--- a/view/frontend/email/order_new.html
+++ b/view/frontend/email/order_new.html
@@ -5,7 +5,7 @@
 "var order.increment_id":"Order Id",
 "layout handle=\"sales_email_order_items\" order=$order area=\"frontend\"":"Order Items Grid",
 "var payment_html|raw":"Payment Details",
-"var sveaShippingDestinationAddress|raw":"Svea Shipping Location Address",
+"var sveaShippingDestinationAddress|raw":"Shipping Destination Address, can be either customer's shipping address or a pickup point address",
 "var order.shipping_description":"Shipping Description",
 "var shipping_msg":"Shipping message",
 "var created_at_formatted":"Order Created At (datetime)",
