[SC-198] Hides row with shipping cost in checkout if Svea Shipping is enabled and a shipping option hasn't been selected yet

--- a/view/frontend/layout/svea_checkout_index_index.xml
+++ b/view/frontend/layout/svea_checkout_index_index.xml
@@ -182,6 +182,11 @@
                     </block>
                 </container>
             </block>
+            <block name="shipping_total_renderer" class="Svea\Checkout\Block\Total\Shipping">
+                <arguments>
+                    <argument name="view_model" xsi:type="object">Svea\Checkout\ViewModel\Total\Shipping</argument>
+                </arguments>
+            </block>
         </referenceContainer>
     </body>
 </page>
