SC-201 Hid the additional shipping cost text at the bottom of the page

--- a/view/frontend/layout/svea_checkout_index_index.xml
+++ b/view/frontend/layout/svea_checkout_index_index.xml
@@ -182,11 +182,13 @@
                     </block>
                 </container>
             </block>
-            <block name="shipping_total_renderer" class="Svea\Checkout\Block\Total\Shipping">
-                <arguments>
-                    <argument name="view_model" xsi:type="object">Svea\Checkout\ViewModel\Total\Shipping</argument>
-                </arguments>
-            </block>
+            <container name="svea.shipping.total.wrapper" htmlTag="div" htmlClass="svea-hidden">
+                <block name="shipping_total_renderer" class="Svea\Checkout\Block\Total\Shipping">
+                    <arguments>
+                        <argument name="view_model" xsi:type="object">Svea\Checkout\ViewModel\Total\Shipping</argument>
+                    </arguments>
+                </block>
+            </container>
         </referenceContainer>
     </body>
 </page>
