--- a/view/frontend/web/css/source/module/_checkout.less
+++ b/view/frontend/web/css/source/module/_checkout.less
@@ -90,6 +90,10 @@
   }
 }
 
+.svea-hidden {
+  display: none;
+}
+
 //
 //  Main
 //  _____________________________________________
@@ -1343,3 +1347,4 @@ button:not(.primary).svea-primary {
   }
 
 }
+
