--- a/view/adminhtml/templates/payment/checkout/info.phtml
+++ b/view/adminhtml/templates/payment/checkout/info.phtml
@@ -7,6 +7,14 @@ use Magento\Framework\Escaper;
  * @var Escaper $escaper
  */
 
+$handler = $block->getSveaOrderManagement();
+$handler->resetCredentials($block->getMethod()->getStore());
+$sveaOrder = null;
+try {
+    $sveaOrder = $handler->getOrder($this->getSveaCheckoutId());
+    $delivery = $sveaOrder->getFirstRefundableDelivery();
+} catch (\Exception $e) {
+}
 ?>
 <div class="order-payment-method-name"><?= $escaper->escapeHtml($block->getMethod()->getTitle()); ?></div>
 <table class="data-table admin__table-secondary">
@@ -18,6 +26,26 @@ use Magento\Framework\Escaper;
         <th><?= $escaper->escapeHtml(__('Svea Payment Method')); ?>:</th>
         <td><?= $escaper->escapeHtml($block->getSveaPaymentMethod()); ?></td>
     </tr>
+    <?php if ($sveaOrder): ?>
+    <tr>
+        <th><?= $escaper->escapeHtml(__('Svea Order Status')); ?>:</th>
+        <td><?= $escaper->escapeHtml($sveaOrder->getOrderStatus()); ?></td>
+    </tr>
+    <tr>
+        <th><?= $escaper->escapeHtml(__('Svea Order Amount')); ?>:</th>
+        <td><?= $escaper->escapeHtml(preg_replace('/\d\d$/', ',$0', strval(
+            $sveaOrder->getOrderAmount()
+        ))) ?></td>
+    </tr>
+    <?php if ($delivery): ?>
+    <tr>
+        <th><?= $escaper->escapeHtml(__('Svea Delivery Amount')); ?>:</th>
+        <td><?= $escaper->escapeHtml(preg_replace('/\d\d$/', ',$0', strval(
+            $delivery->getDeliveryAmount()
+        ))) ?></td>
+    </tr>
+    <?php endif ?>
+    <?php endif ?>
     <?php if ($block->getSveaCustomerReference()): ?>
         <tr>
             <th><?= $escaper->escapeHtml(__('Svea Customer Payment Reference')) ?>:</th>
